--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-bs4>=0.0.2
-chromadb>=0.6.3
-dotenv>=0.9.9
+docx2txt>=0.9
+fastapi>=0.115.9
 google-adk>=0.3.0
 google-generativeai>=0.8.5
 langchain-chroma>=0.2.3
-langchain-core>=0.3.56
+langchain-community>=0.3.23
+langchain-core>=0.3.59
 langchain-google-genai>=2.0.10
+langchain-text-splitters>=0.3.8
+pypdf>=5.4.0
+pysqlite3-binary>=0.5.4
+python-dotenv>=1.1.0
 requests>=2.32.3
-fastapi>=0.115.9
 uvicorn>=0.34.2
