--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bs4>=0.0.2
 docx2txt>=0.9
 fastapi>=0.115.9
 google-adk>=0.3.0
@@ -10,5 +11,6 @@ langchain-text-splitters>=0.3.8
 pypdf>=5.4.0
 pysqlite3-binary>=0.5.4
 python-dotenv>=1.1.0
+python-multipart>=0.0.20
 requests>=2.32.3
 uvicorn>=0.34.2
