--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ docx2txt>=0.9
 fastapi>=0.115.9
 google-adk>=0.3.0
 google-generativeai>=0.8.5
-langchain-chroma>=0.2.3
 langchain-community>=0.3.23
 langchain-core>=0.3.59
 langchain-google-genai>=2.0.10
 langchain-text-splitters>=0.3.8
+langchain-faiss>=0.1.1
+faiss-cpu>=1.7.4
 pypdf>=5.4.0
-pysqlite3-binary>=0.5.4
 python-dotenv>=1.1.0
 python-multipart>=0.0.20
 requests>=2.32.3
